--- a/index.html
+++ b/index.html
@@ -8,29 +8,65 @@
         <link rel="stylesheet" type="text/css" href="styles/main.css">
     </head>
 
-    <body>
-        <div class="col-xs-offset-2 col-xs-8">
-            <h1>NG Todo</h1>
-            
-            <h3>New Todo</h3>
-            <div class="col-xs-12 new-text-container">
-                <div  class="col-xs-10 newtodo-input ">
-                    <input type="text" class="form-control" id="add-todo-text" placeholder="New Todo Item">
-                </div>
-                <div class=col-xs-2"">
-                    <button type="button" class="btn btn-primary btn-lg col-xs-2 " id="add-todo-button">New Todo</button>
-                </div>
+    <body ng-app="TodoApp">
+        
+
+        <nav class="navbar navbar-default" ng-controller="NavCtrl">
+          <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="#">Todo App</a>
             </div>
 
-            <h3>Todo</h3>
-            <ul id="incomplete-tasks"></ul>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+              <ul class="nav navbar-nav navbar-right" ng-repeat="thingy in navItems">
+                <li><a href="#">{{thingy.name}}</a></li>             
+                </ul>
+            </div><!-- /.navbar-collapse -->
+          </div><!-- /.container-fluid -->
+        </nav>
 
-            <h3>Completed</h3>
-            <ul id="completed-tasks"></ul>
+        <div ng-controller="TodoCtrl">
+            <div class="row">
+                <div class="col-xs-6 col-xs-offset-3">
+                    <button class="col-xs-6 btn btn-success" ng-click="newItem()">New Item</button>
+                    <button class="col-xs-6 btn btn-info" ng-click="allItems()">All Items</button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-offset-2 col-xs-8">
+                    <h1>NG Todo</h1>
+                    <div ng-show="!showListView">
+                        <h3>New Todo</h3>
+                        <div class="col-xs-12 new-text-container">
+                        <div  class="col-xs-10 newtodo-input ">
+                            <input type="text" class="form-control" id="add-todo-text" placeholder="New Todo Item">
+                        </div>
+                        <div class=col-xs-2"">
+                            <button type="button" class="btn btn-primary btn-lg col-xs-2 " id="add-todo-button">New Todo</button>
+                        </div>
+                        </div>
+                    </div>
+                    <div ng-show="showListView">
+                        <h3>Todo</h3>
+                        <ul id="incomplete-tasks"></ul>
+
+                        <h3>Completed</h3>
+                        <ul id="completed-tasks"></ul>
+                    </div>
+                </div>
+            </div>
         </div>
-
         <script type="text/javascript" src="/lib/bower_components/jquery/dist/jquery.min.js"></script>
         <script type="text/javascript" src="/lib/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="/lib/bower_components/angular/angular.min.js"></script>
         <script src="/javascripts/app.js"></script>
 
     </body>
