--- a/index.html
+++ b/index.html
@@ -49,17 +49,38 @@
                         <div  class="col-xs-10 newtodo-input ">
                             <input type="text" class="form-control" id="add-todo-text" placeholder="New Todo Item">
                         </div>
-                        <div class=col-xs-2"">
+                        <div class="col-xs-2">
                             <button type="button" class="btn btn-primary btn-lg col-xs-2 " id="add-todo-button">New Todo</button>
                         </div>
                         </div>
                     </div>
                     <div ng-show="showListView">
                         <h3>Todo</h3>
+                        <div ng-repeat="item in items | filter:{isCompleted: false}">
+                            <div class="panel panel-default">
+                                <div class="panel-body">
+                                    <div class="col-xs-1"><input type="checkbox" name="" ng-checked="item.isCompleted"></div>
+                                    <div class="col-xs-9">{{item.task}}</div>
+                                    <div class="col-xs-1">{{item.assignedTo}}</div>
+                                    <div class="col-xs-1"><button class="btn btn-danger">X</button></div>
+                                </div>
+                            </div>
+                        </div>
                         <ul id="incomplete-tasks"></ul>
 
                         <h3>Completed</h3>
-                        <ul id="completed-tasks"></ul>
+                        <ul id="completed-tasks">
+                            <div ng-repeat="item in items | filter:{isCompleted: true}">
+                            <div class="panel panel-default">
+                                <div class="panel-body">
+                                    <div class="col-xs-1"><input type="checkbox" name="" ng-checked="item.isCompleted"></div>
+                                    <div class="col-xs-9">{{item.task}}</div>
+                                    <div class="col-xs-1">{{item.assignedTo}}</div>
+                                    <div class="col-xs-1"><button class="btn btn-danger">X</button></div>
+                                </div>
+                            </div>
+                        </div>
+                        </ul>
                     </div>
                 </div>
             </div>
