--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <title>NG Todo</title>
         <link rel="stylesheet" type="text/css" href="/lib/bower_components/bootstrap/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="styles/main.css">
     </head>
 
@@ -45,24 +46,42 @@
                     <h1>NG Todo</h1>
                     <div ng-show="!showListView">
                         <h3>New Todo</h3>
-                        <div class="col-xs-12 new-text-container">
-                        <div  class="col-xs-10 newtodo-input ">
-                            <input type="text" class="form-control" id="add-todo-text" placeholder="New Todo Item">
-                        </div>
-                        <div class="col-xs-2">
-                            <button type="button" class="btn btn-primary btn-lg col-xs-2 " id="add-todo-button">New Todo</button>
-                        </div>
-                        </div>
+
+                        <form>
+                            <div class="form-group">
+                                <label>Task Description</label>
+                                <input type='text' class="form-control" id="add-todo-text" placeholder="New Todo Item" ng-model="newTask.task">
+                            </div>
+                            <div class="form-group">
+                                <label>Assigned To</label>
+                                <input type='text' class="form-control" id="add-todo-text" placeholder="New Todo Item" ng-model="newTask.assignedTo">
+                            </div>
+                            <button type="button" class="btn btn-primary btn-lg" col-xs-2" id="add-todo-button" ng-click="addNewItem()">New Todo</button>
+                        </form>
                     </div>
+
                     <div ng-show="showListView">
+                        <divclass="row">
+                            <div class="col-xs-6 col-xs-offset-3">
+                                <div class="input-group">
+                                    <span class="input-group-bin">
+                                        <button class="btn btn-default"><i class="fa fa-search"></i></button>
+                                    </span>
+                                    <input type="text" class="form-control" placeholder="Search for ..."
+                                    ng-model="searchText"/>
+                                </div> 
+                            </div>    
+                        </div>
+
+
                         <h3>Todo</h3>
-                        <div ng-repeat="item in items | filter:{isCompleted: false}">
+                        <div ng-repeat="item in items | filter:{isCompleted: false} | filter: searchText">
                             <div class="panel panel-default">
                                 <div class="panel-body">
                                     <div class="col-xs-1"><input type="checkbox" name="" ng-checked="item.isCompleted"></div>
                                     <div class="col-xs-9">{{item.task}}</div>
                                     <div class="col-xs-1">{{item.assignedTo}}</div>
-                                    <div class="col-xs-1"><button class="btn btn-danger">X</button></div>
+                                    <div class="col-xs-1"><button class="btn btn-danger fa fa-trash-o"></button></div>
                                 </div>
                             </div>
                         </div>
@@ -76,7 +95,7 @@
                                     <div class="col-xs-1"><input type="checkbox" name="" ng-checked="item.isCompleted"></div>
                                     <div class="col-xs-9">{{item.task}}</div>
                                     <div class="col-xs-1">{{item.assignedTo}}</div>
-                                    <div class="col-xs-1"><button class="btn btn-danger">X</button></div>
+                                    <div class="col-xs-1"><button class="btn btn-danger fa fa-trash-o"></button></div>
                                 </div>
                             </div>
                         </div>
