initializing day2 branch.

--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
     <head>
         <meta charset="utf-8">
         <title>NG Todo</title>
-        <link rel="stylesheet" type="text/css" href="/lib/bower_components/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" type="text/css" href="/lib/bower_components/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="styles/main.css">
     </head>
 
-    <body ng-app="TodoApp">
-        
-
+    <body  ng-app="TodoApp">
         <nav class="navbar navbar-default" ng-controller="NavCtrl">
           <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -28,11 +26,13 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right" ng-repeat="thingy in navItems">
-                <li><a href="#">{{thingy.name}}</a></li>             
-                </ul>
+                <li><a href="#">{{thingy.name}}</a></li>
+              </ul>
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
         </nav>
+
+
 
         <div ng-controller="TodoCtrl">
             <div class="row">
@@ -46,36 +46,32 @@
                     <h1>NG Todo</h1>
                     <div ng-show="!showListView">
                         <h3>New Todo</h3>
-
                         <form>
                             <div class="form-group">
                                 <label>Task Description</label>
-                                <input type='text' class="form-control" id="add-todo-text" placeholder="New Todo Item" ng-model="newTask.task">
+                                    <input type="text" class="form-control" placeholder="New Todo Item" ng-model="newTask.task">
                             </div>
                             <div class="form-group">
                                 <label>Assigned To</label>
-                                <input type='text' class="form-control" id="add-todo-text" placeholder="New Todo Item" ng-model="newTask.assignedTo">
+                                <input type="text" class="form-control" placeholder="New Todo Item" ng-model="newTask.assignedTo">
                             </div>
-                            <button type="button" class="btn btn-primary btn-lg" col-xs-2" id="add-todo-button" ng-click="addNewItem()">New Todo</button>
+                            <button type="button" class="btn btn-primary btn-lg col-xs-2 " ng-click="addNewItem()">New Todo</button>
                         </form>
                     </div>
-
                     <div ng-show="showListView">
-                        <divclass="row">
+                        <div class="row">
                             <div class="col-xs-6 col-xs-offset-3">
                                 <div class="input-group">
-                                    <span class="input-group-bin">
+                                    <span class="input-group-btn">
                                         <button class="btn btn-default"><i class="fa fa-search"></i></button>
                                     </span>
-                                    <input type="text" class="form-control" placeholder="Search for ..."
-                                    ng-model="searchText"/>
-                                </div> 
-                            </div>    
+                                    <input type="text" class="form-control" placeholder="Search for ..." ng-model="searchText">
+                                </div>
+                            </div>
                         </div>
-
 
                         <h3>Todo</h3>
-                        <div ng-repeat="item in items | filter:{isCompleted: false} | filter: searchText">
+                        <div ng-repeat="item in items | filter: {isCompleted:false} | filter: searchText">
                             <div class="panel panel-default">
                                 <div class="panel-body">
                                     <div class="col-xs-1"><input type="checkbox" name="" ng-checked="item.isCompleted"></div>
@@ -85,11 +81,9 @@
                                 </div>
                             </div>
                         </div>
-                        <ul id="incomplete-tasks"></ul>
 
                         <h3>Completed</h3>
-                        <ul id="completed-tasks">
-                            <div ng-repeat="item in items | filter:{isCompleted: true}">
+                            <div ng-repeat="item in items | filter: {isCompleted:true}">
                             <div class="panel panel-default">
                                 <div class="panel-body">
                                     <div class="col-xs-1"><input type="checkbox" name="" ng-checked="item.isCompleted"></div>
@@ -99,7 +93,6 @@
                                 </div>
                             </div>
                         </div>
-                        </ul>
                     </div>
                 </div>
             </div>
@@ -111,6 +104,9 @@
 
     </body>
 </html>
+
+
+
 
 
 
