--- a/index.html
+++ b/index.html
@@ -97,10 +97,15 @@
                 </div>
             </div>
         </div>
+        <script src="https://www.gstatic.com/firebasejs/3.6.1/firebase.js"></script>
         <script type="text/javascript" src="/lib/bower_components/jquery/dist/jquery.min.js"></script>
         <script type="text/javascript" src="/lib/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="/lib/bower_components/angular/angular.min.js"></script>
         <script src="/javascripts/app.js"></script>
+        <script type="text/javascript" src="/javascripts/AppConstants.js"></script>
+        <script type="text/javascript" src="/javascripts/AppConfig.js"></script>
+        <script type="text/javascript" src="/javascripts/controllers/NavCtrl.js"></script>
+        <script type="text/javascript" src="/javascripts/controllers/TodoCtrl.js"></script>
 
     </body>
 </html>
