loaded items from firebase to dom.

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
         <script src="/javascripts/app.js"></script>
         <script type="text/javascript" src="/javascripts/AppConstants.js"></script>
         <script type="text/javascript" src="/javascripts/AppConfig.js"></script>
+        <script type="text/javascript" src="/javascripts/factories/ItemFactory.js"></script>
         <script type="text/javascript" src="/javascripts/controllers/NavCtrl.js"></script>
         <script type="text/javascript" src="/javascripts/controllers/TodoCtrl.js"></script>
 
