--- a/index.html
+++ b/index.html
@@ -26,87 +26,30 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right" ng-repeat="thingy in navItems">
-                <li><a href="#">{{thingy.name}}</a></li>
+                <li><a href="{{thingy.url}}">{{thingy.name}}</a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
         </nav>
 
-
-
-        <div ng-controller="TodoCtrl">
-            <div class="row">
-                <div class="col-xs-6 col-xs-offset-3">
-                    <button class="col-xs-6 btn btn-success" ng-click="newItem()">New Item</button>
-                    <button class="col-xs-6 btn btn-info" ng-click="allItems()">All Items</button>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-offset-2 col-xs-8">
-                    <h1>NG Todo</h1>
-                    <div ng-show="!showListView">
-                        <h3>New Todo</h3>
-                        <form>
-                            <div class="form-group">
-                                <label>Task Description</label>
-                                    <input type="text" class="form-control" placeholder="New Todo Item" ng-model="newTask.task">
-                            </div>
-                            <div class="form-group">
-                                <label>Assigned To</label>
-                                <input type="text" class="form-control" placeholder="New Todo Item" ng-model="newTask.assignedTo">
-                            </div>
-                            <button type="button" class="btn btn-primary btn-lg col-xs-2 " ng-click="addNewItem()">New Todo</button>
-                        </form>
-                    </div>
-                    <div ng-show="showListView">
-                        <div class="row">
-                            <div class="col-xs-6 col-xs-offset-3">
-                                <div class="input-group">
-                                    <span class="input-group-btn">
-                                        <button class="btn btn-default"><i class="fa fa-search"></i></button>
-                                    </span>
-                                    <input type="text" class="form-control" placeholder="Search for ..." ng-model="searchText">
-                                </div>
-                            </div>
-                        </div>
-
-                        <h3>Todo</h3>
-                        <div ng-repeat="item in items | filter: {isCompleted:false} | filter: searchText">
-                            <div class="panel panel-default">
-                                <div class="panel-body">
-                                    <div class="col-xs-1"><input type="checkbox" name="" ng-checked="item.isCompleted"></div>
-                                    <div class="col-xs-9">{{item.task}}</div>
-                                    <div class="col-xs-1">{{item.assignedTo}}</div>
-                                    <div class="col-xs-1"><button class="btn btn-danger fa fa-trash-o" ng-click="deleteItem(item.id)"></button></div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <h3>Completed</h3>
-                            <div ng-repeat="item in items | filter: {isCompleted:true}">
-                            <div class="panel panel-default">
-                                <div class="panel-body">
-                                    <div class="col-xs-1"><input type="checkbox" name="" ng-checked="item.isCompleted"></div>
-                                    <div class="col-xs-9">{{item.task}}</div>
-                                    <div class="col-xs-1">{{item.assignedTo}}</div>
-                                    <div class="col-xs-1"><button class="btn btn-danger fa fa-trash-o" ng-click="deleteItem(item.id)"></button></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div class="row">
+            <h1>NG Todo</h1>
+            <div class="col-xs-offset-2 col-xs-8" ng-view></div>
         </div>
+
+
         <script src="https://www.gstatic.com/firebasejs/3.6.1/firebase.js"></script>
         <script type="text/javascript" src="/lib/bower_components/jquery/dist/jquery.min.js"></script>
         <script type="text/javascript" src="/lib/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="/lib/bower_components/angular/angular.min.js"></script>
+        <script type="text/javascript" src="/lib/bower_components/angular-route/angular-route.min.js"></script>
         <script src="/javascripts/app.js"></script>
         <script type="text/javascript" src="/javascripts/AppConstants.js"></script>
         <script type="text/javascript" src="/javascripts/AppConfig.js"></script>
         <script type="text/javascript" src="/javascripts/factories/ItemFactory.js"></script>
         <script type="text/javascript" src="/javascripts/controllers/NavCtrl.js"></script>
-        <script type="text/javascript" src="/javascripts/controllers/TodoCtrl.js"></script>
+        <script type="text/javascript" src="/javascripts/controllers/ItemListCtrl.js"></script>
+        <script type="text/javascript" src="/javascripts/controllers/ItemNewCtrl.js"></script>
 
     </body>
 </html>
