--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
         <script type="text/javascript" src="/javascripts/controllers/NavCtrl.js"></script>
         <script type="text/javascript" src="/javascripts/controllers/ItemListCtrl.js"></script>
         <script type="text/javascript" src="/javascripts/controllers/ItemNewCtrl.js"></script>
-
+        <script type="text/javascript" src="/javascripts/controllers/ItemViewCtrl.js"></script>
+        <script type="text/javascript" src="/javascripts/controllers/ItemEditCtrl.js"></script>
     </body>
 </html>
 
