--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
         <script src="/javascripts/app.js"></script>
         <script type="text/javascript" src="/javascripts/AppConstants.js"></script>
         <script type="text/javascript" src="/javascripts/AppConfig.js"></script>
+        <script type="text/javascript" src="/javascripts/factories/AuthFactory.js"></script>
         <script type="text/javascript" src="/javascripts/factories/ItemFactory.js"></script>
+        <script type="text/javascript" src="/javascripts/factories/UserFactory.js"></script>
+        <script type="text/javascript" src="/javascripts/controllers/AuthCtrl.js"></script>
         <script type="text/javascript" src="/javascripts/controllers/NavCtrl.js"></script>
         <script type="text/javascript" src="/javascripts/controllers/ItemListCtrl.js"></script>
         <script type="text/javascript" src="/javascripts/controllers/ItemNewCtrl.js"></script>
